add not found page UI

--- a/src/scss/generic/_variables.scss
+++ b/src/scss/generic/_variables.scss
@@ -3,3 +3,10 @@ $mobile-large: 512px;
 $tablet: 768px;
 $laptop: 992px;
 $desktop: 1200px;
+
+//colors
+$blue: #007aff;
+$black: #000000;
+$white: #ffffff;
+$smoked-white: #f5f5f5;
+$red: #ff2058;
