--- a/src/js/components/shared/loadingIcon/LoadingIcon.scss
+++ b/src/js/components/shared/loadingIcon/LoadingIcon.scss
@@ -1,3 +1,5 @@
+@import "../../../../scss/generic/variables";
+
 .lds-ring {
   display: inline-block;
   position: relative;
@@ -14,7 +16,7 @@
     border: 6px solid;
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #ff2058 transparent transparent transparent;
+    border-color: $red transparent transparent transparent;
 
     &:nth-child(1) {
       animation-delay: -0.45s;
