--- a/src/js/containers/pages/notFoundPage/NotFoundPage.scss
+++ b/src/js/containers/pages/notFoundPage/NotFoundPage.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $blue;
+  background-color: $primary;
   color: $white;
   font-size: 100%;
   line-height: 1.5;
@@ -35,9 +35,9 @@
     font-size: 1.2rem;
 
     &:hover {
-      border: 1px solid $blue;
+      border: 1px solid $primary;
       background-color: $white;
-      color: $blue;
+      color: $primary;
     }
   }
 }
