--- a/src/scss/generic/_variables.scss
+++ b/src/scss/generic/_variables.scss
@@ -5,8 +5,13 @@ $laptop: 992px;
 $desktop: 1200px;
 
 //colors
-$blue: #007aff;
 $black: #000000;
 $white: #ffffff;
 $smoked-white: #f5f5f5;
-$red: #ff2058;
+$primary: #007bff;
+$secondary: #6c757d;
+$success: #28a745;
+$danger: #dc3545;
+$warning: #ffc107;
+$info: #17a2b8;
+$dark: #343a40;
