--- a/src/js/components/shared/modal/Modal.scss
+++ b/src/js/components/shared/modal/Modal.scss
@@ -37,8 +37,8 @@
     max-width: 600px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
-    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 8px 16px 0 rgba($black, 0.2),
+    0 6px 20px 0 rgba($black, 0.19);
     box-sizing: border-box;
     transition: all 0.3s ease-out;
     cursor: initial;
