--- a/src/js/components/shared/card/Card.scss
+++ b/src/js/components/shared/card/Card.scss
@@ -1,6 +1,7 @@
 @import "../../../../scss/generic/variables";
 
 .shadow-card {
+  overflow: hidden;
   box-shadow: 0px 2px 1px -1px rgba($black, 20%), 0px 1px 1px 0px rgba($black, 14%), 0px 1px 3px 0px rgba($black,12%);
   border-radius: 5px;
   &:not(:last-of-type) {
