--- a/src/js/components/shared/card/Card.scss
+++ b/src/js/components/shared/card/Card.scss
@@ -4,6 +4,18 @@
   overflow: hidden;
   box-shadow: 0px 2px 1px -1px rgba($black, 20%), 0px 1px 1px 0px rgba($black, 14%), 0px 1px 3px 0px rgba($black,12%);
   border-radius: 5px;
+  --x: calc(var(--px) - 0.5);
+  --y: calc(var(--py) - 0.5);
+  transform-style: preserve-3d;
+  transform: perspective(1000px) translateX(calc(100% * var(--offset)));
+  transition: transform 0.5s ease-in-out;
+
+  &:hover {
+    transition: none;
+    transform: perspective(1000px) rotateY(calc(var(--x) * 45deg))
+    rotateX(calc(var(--y) * -45deg));
+  }
+
   &:not(:last-of-type) {
     margin-bottom: 20px;
   }
