add home page styles

--- a/src/scss/generic/_variables.scss
+++ b/src/scss/generic/_variables.scss
@@ -15,5 +15,5 @@ $danger: #dc3545;
 $warning: #ffc107;
 $info: #17a2b8;
 $dark: #343a40;
-$aquamarine: #7fffd4;
+$aquamarine: #66fcf1;
 $grey: #9e9e9e;
