--- a/src/js/containers/pages/homePage/HomePage.scss
+++ b/src/js/containers/pages/homePage/HomePage.scss
@@ -24,11 +24,23 @@
       line-height: .95;
       color: $aquamarine;
       font-weight: 900;
-      font-size: 150px;
+      font-size: 10vw;
       text-transform: uppercase;
       user-select: none;
       pointer-events: none;
       margin: 0 0 20px 0;
+
+      @media (min-width: $mobile-large) {
+        font-size: 60px;
+      }
+
+      @media (min-width: $tablet) {
+        font-size: 100px;
+      }
+
+      @media (min-width: $laptop) {
+        font-size: 150px;
+      }
     }
 
     .link {
@@ -39,7 +51,7 @@
       border: 2px solid $aquamarine;
       border-radius: 2px;
       background: none;
-      font-size: 16px;
+      font-size: 12px;
       line-height: 54px;
       color: $white;
       letter-spacing: .25em;
@@ -55,6 +67,10 @@
       &:hover {
         background:$aquamarine;
         color: $black;
+      }
+
+      @media (min-width: $mobile-large) {
+        font-size: 16px;
       }
     }
   }
